--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ canvas {
   border-radius: 0.9em;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6);
   overflow: hidden;
+  background-color: #FFFFFF;
 }
 
 #menu .title {
